# OpenForBC-Benchmark

./: .clang-format  .clang-tidy  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark_suite.py  mypy.ini  o4bc-bench  pyproject.toml  requirements.txt  runner.py  test_PR.sh  tox.ini
.github/workflows/: CI.yml  auto-cli-readme.yml  clang_tidy.yml  test.yml  test_benchmarks.yml
Benchmark/api/: FetchSys.py  main.py
api/: fetchsys.py  main.py
benchmark/: benchmark_suite.py  benchmark_wrapper.py  benchmarkwrapper.py  cli.py  dummy.py  dummy_classifier.py  dummy_regressor.py  dummyclassifier.py  dummyregressor.py  interface_skeleton.py  mlperf.py  tasks.py
benchmark/api/: main.py  models.py
benchmark/celery/: tasks.py
benchmark/dummy_benchmark/: __init__.py  dummy_classifier.py  dummy_regressor.py
benchmarks/: __init__.py
benchmarks/TCGA_topicmodeling/: .gitignore  (+5 more)
common/: benchmark_factory.py  benchmark_suite.py  benchmark_wrapper.py  phoronix_benchmark_info.json.template  phoronix_implementation.py.template  phoronix_parser.py  utils.py
config/: celeryd  dummy_config.json  dummy_preset.json  mlperf_config.json
docs/: developer-guide.md  user-guide.md
interface/: cli.py  interface_skeleton.py
jsonschema/: benchmark.schema.json  benchmark_preset.schema.json  benchmark_stats.schema.json
openforbc_benchmark/: benchmark.py  common.py  json.py  utils.py
scripts/: install_docker.sh
suites/: blender_suite_1.json  example_suite.json  example_suite_2.json
tests/: t_benchmark_factory.py  t_benchmark_suite.py  t_cli.py  t_suite_factory_wrapper.py  test_benchmark.py  test_benchmark_factory.py  test_benchmark_suite.py  test_cli.py  test_cli_interface.py  test_command.py  test_json.py  test_phoronix_parser.py  test_user_interfaces_utils.py
user_interfaces/: cli.py  interface_skeleton.py  utils.py
(+172 files in other folders)
