[tool.poetry]
name = "openforbc-benchmark"
version = "0.1.0"
description = ""
authors = ["Daniele Monteleone <daniele.monteleone.it@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^4.2.1"
typer = "^0.4.0"
tabulate = "^0.8.9"
yaspin = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"
flake8 = "^4.0.1"
flake8-annotations = "^2.7.0"
flake8-type-checking = "^1.1.0"
flake8-docstrings = "^1.6.0"
flake8-simplify = "^0.14.2"
flake8-comprehensions = "^3.7.0"
mypy = "^0.910"
types-jsonschema = "^3.2.1"
types-tabulate = "^0.8.3"

[tool.poetry.scripts]
o4bc-bench = "openforbc_benchmark.cli.app:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
