[tool.poetry]
authors = [
  "Aneesh Chawla <aneesh404@gmail.com>",
  "Alessio Borriero <aleborri@gmail.com>",
  "Daniele Monteleone <daniele.monteleone.it@gmail.com>",
  "Federica Legger <federica.legger@gmail.com>",
  "Gabriele Gaetano Fronzé <sucre.91@hotmail.it>",
]
description = ""
name = "openforbc-benchmark"
version = "1.0.0-rc.3"

[tool.poetry.dependencies]
inquirer = "^2.8.0"
jsonschema = "^4.4.0"
python = "^3.9"
tabulate = "^0.8.9"
typer = "^0.4.0"
yaspin = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-annotations = "^2.7.0"
flake8-comprehensions = "^3.7.0"
flake8-docstrings = "^1.6.0"
flake8-simplify = "^0.18.1"
flake8-type-checking = "^1.1.0"
mypy = "^0.942"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
tox = "^3.24.4"
types-jsonschema = "^4.4.2"
types-tabulate = "^0.8.3"

[tool.poetry.scripts]
o4bc-bench = "openforbc_benchmark.cli.app:run"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
